--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"author": "SanjuSrivatsa",
-  "description" : "The best project to self learn",
+	"description": "The best project to self learn",
 	"name": "fcc-learn-npm-package-json",
+  "license": "MIT",
+  "keywords": ["freecodecamp", "SanjuSrivatsa", "learn"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
